--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,11 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-/logs/
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-media/
-staticfiles/
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Pytest
-.pytest_cache/
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre
-.pyre/
-
-# VS Code
-.vscode/
-
-# JetBrains IDEs
-.idea/
-
-# Node.js
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Environment variables
+__pycache__
 .env
-*.env
-
-# macOS
-.DS_Store
-
-# System
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# Svelte / React / Vite build output
-build/
-dist/
-
-# Coverage reports
-htmlcov/
-.coverage
-coverage.xml
-*.cover
-*.py,cover
-
-# Others
-*.bak
-*.swp
+.venv
+.pytest_cache
+.ruff_cache
+.vscode
+.idea
+.pytest_cache
+.ruff_cache
+.vscode
+.idea
