--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,4 @@ setuptools==80.3.1
 zope-event==5.0
 zope-interface==7.2
 flask-socketio>=5.3.0
-eventlet>=0.33.0  # or gevent for production
+eventlet>=0.33.0  
