--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-click==8.1.8
-Flask==3.1.0
 flask_cors==5.0.1
-python-dotenv==1.1.0
-PyYAML==6.0.2
-PyYAML==6.0.2
-Requests==2.32.3
-tenacity==9.1.2
-regex
-google-genai
-gevent==25.4.2
-greenlet==3.2.1
-gunicorn==23.0.0
-packaging==25.0
-setuptools==80.3.1
-zope-event==5.0
-zope-interface==7.2
 flask-socketio>=5.3.0
-eventlet>=0.33.0  
+Flask 
+crewai==0.108.0
